--- a/tasks/alert-gpu-drop.yaml
+++ b/tasks/alert-gpu-drop.yaml
@@ -30,12 +30,15 @@ spec:
               reason = '掉卡'
               error_message = ''
 
-              def send(message):
+              def send(status, message):
                   payload = {
-                      'msgtype': 'text',
-                      'text': {
-                          'content': message
-                      }
+                      'cluster': cluster,
+                      'host': hostname,
+                      'kind': 'alert-gpu-drop',
+                      'threshold': str(desired_card_count),
+                      'operator': '!=',
+                      'status': status,
+                      'reason': message
                   }
                   headers = {
                       'Content-Type': 'application/json'
@@ -90,4 +93,6 @@ spec:
               finally:
                   if len(error_message) > 0:
                       error_message = f'集群: {cluster} \n节点: {hostname} \n{error_message}异常判断: {reason}\n'
-                      send(error_message)
+                      send('alert', error_message)
+                  else:
+                      send('normal', '')
