--- a/tasks/alert-gpu-fabric.yaml
+++ b/tasks/alert-gpu-fabric.yaml
@@ -29,12 +29,15 @@ spec:
         reason = 'fabricmanager异常'
         error_message = ''
 
-        def send(message):
+        def send(status, message):
             payload = {
-                'msgtype': 'text',
-                'text': {
-                    'content': message
-                }
+                'cluster': cluster,
+                'host': hostname,
+                'kind': 'alert-gpu-fabric',
+                'threshold': str(max),
+                'operator': '>',
+                'status': status,
+                'reason': message
             }
             headers = {
                 'Content-Type': 'application/json'
@@ -99,4 +102,6 @@ spec:
         finally:
             if len(error_message) > 0:
                 error_message = f'集群: {cluster} \n节点: {hostname} \n{error_message}异常判断: {reason}\n'
-                send(error_message)
+                send('alert', error_message)
+            else:
+                send('normal', error_message)
