--- a/tasks/alert-gpu-zombie.yaml
+++ b/tasks/alert-gpu-zombie.yaml
@@ -30,12 +30,13 @@ spec:
               card_id = ''
               reason = '显存使用异常'
 
-              def send(message):
+              def send(status, message):
                   payload = {
-                      'msgtype': 'text',
-                      'text': {
-                          'content': message
-                      }
+                      'cluster': cluster,
+                      'host': hostname,
+                      'kind': 'alert-gpu-zombie',
+                      'status': status,
+                      'reason': message
                   }
                   headers = {
                       'Content-Type': 'application/json'
@@ -74,4 +75,6 @@ spec:
               finally:
                   if len(error_message) > 0:
                       error_message = f'集群: {cluster} \n节点: {hostname} \n{error_message}异常判断: {reason}\n'
-                      send(error_message)
+                      send('alert', error_message)
+                  else:
+                      send('normal', error_message)
