--- a/tasks/clear-disk.yaml
+++ b/tasks/clear-disk.yaml
@@ -4,11 +4,23 @@ metadata:
   name: clear-disk
   namespace: ops-system
 spec:
-  desc: clear disk
+  desc: clear disk more
+  host: "managed-by=ops"
   steps:
     - name: before clear
       content: |
         timeout 5 df -H | grep -vE '^Filesystem|tmpfs|cdrom|loop|udev' | awk '{ print $5 "/" $2 " " $1 }' |grep " "/
+    - name: delete image
+      content: |
+        (nerdctl --namespace k8s.io images -q 2>/dev/null || docker images -q 2>/dev/null) | xargs -r -I {} sh -c 'nerdctl --namespace k8s.io rmi {} 2>/dev/null || docker rmi {} -f 2>/dev/null || true'
+    - name: clear image
+      content: (nerdctl --namespace k8s.io image prune -f 2>/dev/null || docker image prune -a -f 2>/dev/null || true) | grep "Untagged" || true
+    - name: clear container
+      content: nerdctl --namespace k8s.io container prune -f 2>/dev/null || docker container prune -a -f 2>/dev/null || true
+    - name: clear network
+      content: nerdctl --namespace k8s.io network prune -f 2>/dev/null || docker network prune -a -f 2>/dev/null || true
+    - name: clear volume
+      content: nerdctl --namespace k8s.io volume prune -f 2>/dev/null || docker volume prune -a -f 2>/dev/null || true
     - name: clear > 100M log in /var/log
       content: find /var/log -type f -name "*.log" -size +100M -exec sh -c 'for file do echo "cleaned $file" >&2; echo "" > "$file"; done' sh {} +
     - name: clear > 100M log in /data/run
