--- a/tasks/create-host.yaml
+++ b/tasks/create-host.yaml
@@ -1,10 +1,10 @@
 apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
-  name: auto-create-host
+  name: create-host
   namespace: ops-system
 spec:
-  desc: auto create host
+  desc: create host
   host: anymaster
   steps:
     - name: create host
