--- a/tasks/label-npu.yaml
+++ b/tasks/label-npu.yaml
@@ -1,22 +1,22 @@
 apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
-    name: alert-label-gpu
+    name: label-npu
     namespace: ops-system
 spec:
-    desc: label host alert for ops
+    desc: label host alert for gpu
     host: anymaster
     steps:
         - name: auto-label
           content: |
-              hosts=$(kubectl -n ops-system get hosts | grep NVIDIA | awk '{print $1}')
+              hosts=$(kubectl -n ops-system get hosts | grep Huawei | awk '{print $1}')
 
               for host in $hosts; do
                   hostname=$(kubectl -n ops-system get hosts $host | awk 'NR>1 {print $2}')
                   node_status=$(kubectl get node $hostname)
                   if echo "$node_status" | grep -q "SchedulingDisabled"; then
-                      kubectl -n ops-system label host $host alert-gpu=disabled --overwrite
+                      kubectl -n ops-system label host $host alert-npu=disabled --overwrite
                   else
-                      kubectl -n ops-system label host $host alert-gpu=enabled --overwrite
+                      kubectl -n ops-system label host $host alert-npu=enabled --overwrite
                   fi
               done
