--- a/pipelines/clear-disk.yaml
+++ b/pipelines/clear-disk.yaml
@@ -1,21 +1,16 @@
 apiVersion: crd.chenshaowen.com/v1
 kind: Pipeline
 metadata:
-  name: cluster-clear-disk-more
+  name: clear-disk
   namespace: ops-system
 spec:
-  desc: 深度、更多清理节点磁盘
+  desc: 清理磁盘
   variables:
     cluster:
-      value: "cluster"
       required: true
     host:
-      required: true
-    nodeName:
       regex: "\b[a-zA-Z-]*node[a-zA-Z-]*\b"
       required: true
   tasks:
-    - name: 检查节点是否存在
-      taskRef: check-node-existed
     - name: 清理磁盘
-      taskRef: clear-disk-more
+      taskRef: clear-disk
