--- a/pipelines/cordon-node.yaml
+++ b/pipelines/cordon-node.yaml
@@ -1,21 +1,18 @@
 apiVersion: crd.chenshaowen.com/v1
 kind: Pipeline
 metadata:
-  name: cluster-clear-disk
+  name: cordon-node
   namespace: ops-system
 spec:
-  desc: 清理节点磁盘
+  desc: 禁用集群中的某个节点
   variables:
     cluster:
-      value: "cluster"
       required: true
     host:
       required: true
-    nodeName:
       regex: "\b[a-zA-Z-]*node[a-zA-Z-]*\b"
-      required: true
   tasks:
     - name: 检查节点是否存在
       taskRef: check-node-existed
-    - name: 清理磁盘
-      taskRef: clear-disk-more
+    - name: 禁用节点
+      taskRef: cordon-node
