--- a/pipelines/restart-pod.yaml
+++ b/pipelines/restart-pod.yaml
@@ -1,17 +1,14 @@
 apiVersion: crd.chenshaowen.com/v1
 kind: Pipeline
 metadata:
-  name: cluster-restart-pod
+  name: restart-pod
   namespace: ops-system
 spec:
   desc: 重启、删除集群中的某一个 Pod
   variables:
     cluster:
-      value: "cluster"
       required: true
     host:
-      required: true
-    nodeName:
       value: "anymaster"
       required: true
     podname:
