--- a/tasks/alert-cluster-pod.yaml
+++ b/tasks/alert-cluster-pod.yaml
@@ -86,5 +86,5 @@ spec:
                       error_message = str(e)
               finally:
                   if len(abnormal_pods) > threshold:
-                      error_message = f'集群: {cluster} \n{error_message}异常判断: {reason}\n'
+                      error_message = f'{error_message}{reason}'
                       send(error_message)
