--- a/tasks/alert-node-event.yaml
+++ b/tasks/alert-node-event.yaml
@@ -93,12 +93,12 @@ spec:
                       if describe_output:
                           node_info, event_errors = parse_events(describe_output)
                           if event_errors:
-                              error_message += f'\n集群: {cluster}\n节点: {node_name}\nEvents:\n{event_errors}'
+                              error_message += f'\nEvents:\n{event_errors}'
 
               except Exception as e:
                   error_message = str(e)
               finally:
                   if len(error_message) > 0:
-                      send('alert', f'{error_message}关键字: {", ".join(keywords)}\n')
+                      send('alert', f'{error_message}关键字: {", ".join(keywords)}')
                   else:
                       send('normal', '')
