--- a/tasks/alert-npu-cm.yaml
+++ b/tasks/alert-npu-cm.yaml
@@ -92,7 +92,7 @@ spec:
                       error_message = str(e)
               finally:
                   if len(error_message) > 0:
-                      error_message = f'集群: {cluster} \n{error_message}异常判断: {reason}\n'
+                      error_message = f'\n{error_message}{reason}'
                       send('alert', error_message)
                   else:
                       send('normal', error_message)
