fix: crd display

--- a/charts/ops/crds/crd.chenshaowen.com_pipelineruns.yaml
+++ b/charts/ops/crds/crd.chenshaowen.com_pipelineruns.yaml
@@ -16,8 +16,8 @@ spec:
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
-    - jsonPath: .spec.ref
-      name: Ref
+    - jsonPath: .spec.pipelineRef
+      name: PipelineRef
       type: string
     - jsonPath: .spec.crontab
       name: Crontab
