--- a/tasks/search-clusterip.yaml
+++ b/tasks/search-clusterip.yaml
@@ -1,7 +1,7 @@
 apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
-  name: inspect-clusterip
+  name: search-clusterip
   namespace: ops-system
 spec:
   desc: get clusterip details in cluster
