--- a/tasks/alert-gpu-drop.yaml
+++ b/tasks/alert-gpu-drop.yaml
@@ -38,7 +38,7 @@ spec:
                       'threshold': str(desired_card_count),
                       'operator': '!=',
                       'status': status,
-                      'reason': message
+                      'message': message
                   }
                   headers = {
                       'Content-Type': 'application/json'
