--- a/tasks/alert-gpu-zombie.yaml
+++ b/tasks/alert-gpu-zombie.yaml
@@ -36,7 +36,7 @@ spec:
                       'host': hostname,
                       'kind': 'alert-gpu-zombie',
                       'status': status,
-                      'reason': message
+                      'message': message
                   }
                   headers = {
                       'Content-Type': 'application/json'
