--- a/tasks/alert-http-status.yaml
+++ b/tasks/alert-http-status.yaml
@@ -29,6 +29,7 @@ spec:
               notifaction = '${notifaction}'
               url = '${url}'
               code = int('${code}')
+              hostname = '${hostname}'
               message = ''
 
               def send(status, message):
