--- a/charts/ops/templates/deployment-server.yaml
+++ b/charts/ops/templates/deployment-server.yaml
@@ -49,6 +49,9 @@ spec:
               port: 80
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+          env:
+            - name: CLUSTER
+              value: "default"
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
