--- a/tasks/alert-dataset-notready.yaml
+++ b/tasks/alert-dataset-notready.yaml
@@ -10,7 +10,7 @@ spec:
         notifaction:
             required: true
     steps:
-        - name: alert-dataset-notbound
+        - name: alert-dataset-notready
           content: |
               #!/usr/bin/python
               import subprocess
@@ -46,8 +46,13 @@ spec:
                       name = fields[1]
                       phase = fields[-2]
                       age_str = fields[-1]
-
-                      if phase == 'Bound':
+                      
+                      skip = False
+                      for field in fields:
+                          if field == "Bound":
+                              skip = True
+                              break
+                      if skip:
                           continue
                       
                       if 'd' in age_str:
